--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -13,9 +13,9 @@
     android:icon="@drawable/ic_baseline_local_library_24"
     android:title="Library"/>
 
-    <item android:id="@+id/navbar_settings"
-        android:icon="@drawable/ic_baseline_settings_24"
-        android:title="Settings"/>
+    <item android:id="@+id/navbar_recommendations"
+        android:icon="@drawable/ic_baseline_supervised_user_circle_24"
+        android:title="Recomendations"/>
 
 
 
