--- a/app/src/main/res/layout/fragment_setings.xml
+++ b/app/src/main/res/layout/fragment_setings.xml
@@ -2,10 +2,24 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_settings_messenger_title"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.ui.SetingsFragment">
+    tools:context=".view.ui.SettingsFragment">
 
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Name"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/fragment_settings_editText_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.057"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_settings_circleimage"
+        app:layout_constraintVertical_bias="0.788" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/fragment_settings_circleimage"
@@ -19,33 +33,77 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <TextView
         android:id="@+id/fragment_settings_editText_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="374dp"
+        android:layout_height="34dp"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="84dp"
+        android:layout_marginBottom="10dp"
         android:background="@null"
         android:paddingHorizontal="10dp"
-        android:text="Name"
         android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/fragment_settings_editText_messenger_url"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_settings_circleimage" />
+        app:layout_constraintTop_toBottomOf="@id/fragment_settings_circleimage"
+        tools:text="demo" />
+
+    <TextView
+        android:id="@+id/settings_fragment_messenger_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="333dp"
+        android:layout_marginBottom="5dp"
+        android:text="Messenger Profile"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/fragment_settings_editText_messenger_url"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.025"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_settings_editText_name"
+        app:layout_constraintVertical_bias="0.588" />
 
     <TextView
         android:id="@+id/fragment_settings_editText_messenger_url"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Messenger URL"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginBottom="132dp"
         android:background="@null"
-        android:textSize="25sp"
         android:paddingHorizontal="10dp"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/fragment_settings_button_change_password"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fragment_settings_editText_name"
+        tools:text="https://m.me/demo-profile" />
+
+    <Button
+        android:id="@+id/fragment_settings_button_update"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/fragment_settings_editText_name"
-        />
+        android:layout_marginBottom="27dp"
+        android:gravity="left"
+        android:paddingHorizontal="10dp"
+        android:text="Update Profile"
+        android:textAllCaps="false"
 
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/fragment_settings_button_delete_profile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.85"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_settings_button_change_password" />
 
     <Button
 
@@ -54,50 +112,38 @@
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="10dp"
         android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="36dp"
         android:gravity="left"
-        android:layout_marginTop="20dp"
-        android:textAllCaps="false"
+        android:paddingHorizontal="10dp"
         android:text="Change Password"
+        android:textAllCaps="false"
         android:textSize="25sp"
 
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.85"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_settings_editText_messenger_url" />
-
-    <Button
-        android:id="@+id/fragment_settings_button_update"
-        style="?android:attr/borderlessButtonStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="10dp"
-        android:layout_marginHorizontal="20dp"
-        android:gravity="left"
-        android:layout_marginTop="20sp"
-        android:textAllCaps="false"
-        android:text="Update Profile"
-        android:textSize="25sp"
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_settings_button_change_password" />
 
     <Button
         android:id="@+id/fragment_settings_button_delete_profile"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="10dp"
         android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginBottom="97dp"
         android:gravity="left"
-        android:layout_marginTop="20sp"
-        android:textAllCaps="false"
+        android:paddingHorizontal="10dp"
         android:text="Delete Account"
-        android:textSize="25sp"
+        android:textAllCaps="false"
 
+        android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.85"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_settings_button_update" />
+        app:layout_constraintTop_toBottomOf="@+id/fragment_settings_button_update"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
