--- a/app/src/main/res/layout/fragment_setings.xml
+++ b/app/src/main/res/layout/fragment_setings.xml
@@ -146,4 +146,17 @@
         app:layout_constraintTop_toBottomOf="@+id/fragment_settings_button_update"
         app:layout_constraintVertical_bias="0.0" />
 
+    <Button
+        android:id="@+id/fragment_settings_logout_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="141dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="182dp"
+        android:text="Logout"
+        app:layout_constraintBottom_toTopOf="@+id/fragment_settings_button_delete_profile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_settings_button_update" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
