--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -53,13 +53,13 @@
         app:layout_constraintTop_toBottomOf="@+id/user_item_name" />
 
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/user_item_messenger_icon"
-
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginEnd="4dp"
-        android:src="@drawable/send"
+    <ImageButton
+        android:id="@+id/user_item_send_message_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginEnd="5dp"
+        android:src="@android:drawable/ic_menu_send"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
