--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -29,7 +29,7 @@
         android:layout_marginTop="100dp"
 
         android:layout_marginEnd="33dp"
-        android:layout_marginBottom="149dp"
+        android:layout_marginBottom="10dp"
         android:text="Latest Recommendations"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/fragment_home_recyclerView"
@@ -40,11 +40,13 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/fragment_home_recyclerView"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.54"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
@@ -85,7 +87,9 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/fragment_home_recyclerView"
         app:layout_constraintEnd_toEndOf="@+id/fragment_home_recyclerView"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="@+id/fragment_home_recyclerView"
-        app:layout_constraintTop_toTopOf="@+id/fragment_home_recyclerView" />
+        app:layout_constraintTop_toTopOf="@+id/fragment_home_recyclerView"
+        app:layout_constraintVertical_bias="0.33" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
