--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -51,33 +51,18 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
-        android:id="@+id/fragment_home_greeting_title"
-        android:layout_width="165dp"
-        android:layout_height="30dp"
+        android:id="@+id/fragment_home_greeting_message"
+        android:layout_width="249dp"
+        android:layout_height="36dp"
         android:layout_marginTop="25dp"
         android:layout_marginBottom="45dp"
-        android:text="Welcome back, "
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintEnd_toStartOf="@+id/fragment_home_greeting_user"
-        app:layout_constraintStart_toStartOf="@+id/textView3"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/fragment_home_greeting_user"
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="22dp"
-        android:layout_marginBottom="45dp"
-        android:textSize="24sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toStartOf="@+id/fragment_home_settings_imageButton"
-        app:layout_constraintStart_toEndOf="@+id/fragment_home_greeting_title"
+        app:layout_constraintHorizontal_bias="0.568"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/fragment_home_no_data_msg_textView"
