--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -24,28 +24,24 @@
 
 
         android:id="@+id/fragment_search_recyclerView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_search_searchView" />
 
     <SearchView
         android:id="@+id/fragment_search_searchView"
-        android:layout_width="298dp"
-        android:layout_height="54dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginEnd="57dp"
-        android:layout_marginBottom="30dp"
+        android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
         android:iconifiedByDefault="false"
         app:layout_constraintBottom_toTopOf="@+id/fragment_search_recyclerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_search_search_textview"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/fragment_search_search_textview" />
 </androidx.constraintlayout.widget.ConstraintLayout>
