--- a/app/src/main/res/layout/fragment_setings.xml
+++ b/app/src/main/res/layout/fragment_setings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_settings_messenger_title"
@@ -7,6 +7,10 @@
     android:layout_height="match_parent"
     tools:context=".view.ui.SettingsFragment">
 
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/fragment_settings_circleimage"
@@ -25,64 +29,48 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="40dp"
+        android:text="Display Name"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/fragment_settings_editText_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.057"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_settings_circleimage"
-        app:layout_constraintVertical_bias="0.788" />
+        app:layout_constraintTop_toBottomOf="@+id/fragment_settings_circleimage" />
 
     <TextView
         android:id="@+id/fragment_settings_editText_name"
         android:layout_width="374dp"
         android:layout_height="34dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="84dp"
-        android:layout_marginBottom="10dp"
+
+        android:layout_marginTop="10dp"
         android:background="@null"
-        android:paddingHorizontal="10dp"
         android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/fragment_settings_editText_messenger_url"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@id/fragment_settings_circleimage"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:text="demo" />
 
     <TextView
         android:id="@+id/settings_fragment_messenger_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="333dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginTop="25dp"
         android:text="Messenger Profile"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/fragment_settings_editText_messenger_url"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.025"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_settings_editText_name"
-        app:layout_constraintVertical_bias="0.588" />
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/fragment_settings_editText_name"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_settings_editText_name" />
 
     <TextView
         android:id="@+id/fragment_settings_editText_messenger_url"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginBottom="132dp"
+        android:layout_marginTop="10dp"
         android:background="@null"
-        android:paddingHorizontal="10dp"
+
         android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/fragment_settings_change_password_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_settings_editText_name"
+        app:layout_constraintStart_toStartOf="@+id/settings_fragment_messenger_title"
+        app:layout_constraintTop_toBottomOf="@+id/settings_fragment_messenger_title"
         tools:text="https://m.me/demo-profile" />
 
     <Button
@@ -93,16 +81,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="144dp"
+        android:layout_marginTop="140dp"
         android:gravity="left"
-        android:paddingHorizontal="10dp"
         android:text="Change Password"
         android:textAllCaps="false"
-        android:textSize="25sp"
 
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.45"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="25sp"
+        app:layout_constraintStart_toStartOf="@+id/fragment_settings_editText_messenger_url"
         app:layout_constraintTop_toBottomOf="@+id/fragment_settings_editText_messenger_url" />
 
     <Button
@@ -111,18 +96,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginBottom="97dp"
-        android:gravity="left"
-        android:paddingHorizontal="10dp"
-        android:text="Delete Account"
-        android:textAllCaps="false"
+        android:layout_marginTop="10dp"
 
+        android:gravity="left"
+        android:text="Delete Account"
+
+        android:textAllCaps="false"
         android:textColor="@color/design_default_color_error"
         android:textSize="25sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.85"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/fragment_settings_change_password_button"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_settings_change_password_button" />
 
     <ImageButton
         android:id="@+id/fragment_settings_edit_profile_button"
@@ -141,13 +125,10 @@
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
-        android:layout_marginEnd="182dp"
-        android:textSize="25sp"
-        android:textAllCaps="false"
         android:text="Logout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+       android:layout_marginTop="10dp"
+        android:textAllCaps="false"
+        android:textSize="25sp"
         app:layout_constraintStart_toStartOf="@+id/fragment_settings_delete_account_button"
         app:layout_constraintTop_toBottomOf="@+id/fragment_settings_delete_account_button" />
 
@@ -161,4 +142,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.core.widget.NestedScrollView>
